package com.springboot.telegrambot.util;

public enum BotLabels {
	
	SHOW_MAIN_SCREEN("Show Main Screen"), 
	HIDE_MAIN_SCREEN("Hide Main Screen"),
	LIST_ALL_ITEMS("List All Items"), 
	ADD_NEW_ITEM("Add New Item"),
	GENERATE_REPORT("Generate Report"),
	DONE("DONE"),
	BLOCK("BLOCK"),          
	START("START"),          
	DELETE("DELETE"),
	MY_TODO_LIST("MY TASK LIST"),
	DASH("-");

	private String label;

	BotLabels(String enumLabel) {
		this.label = enumLabel;
	}

	public String getLabel() {
		return label;
	}

}
